turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:17: error: type mismatch;
 found   : Int
 required: java.awt.Color
  setCouleurBrosse(rule(state)(a)(0)); baisseBrosse(); leveBrosse()
                                 ^